# KICS

./: LICENSE  README.md
kics_repo/: CITATION.cff  environment.yml  grid_results.csv  pyproject.toml  requirements.txt
kics_repo/data/: ighm_1.json
kics_repo/kics/: __init__.py  grid.py  ighm.py  kriging.py  params.py  variogram.py
kics_repo/kics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
kics_repo/kics/algorithms/: __init__.py  clustering.py  exhaustive.py  sk_gurobi.py
kics_repo/scripts/: run_grid_experiments.py  run_ighm_example.py  self_test_gurobi.py
kics_repo/tests/: test_ighm.py  test_kriging.py  test_sk_gurobi.py  test_variogram.py
