[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kics"
version = "0.1.0"
description = "Reproducible artifact for Kriging-informed coverage sampling"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  {name = "Esther Jose"}
]

dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
  "scikit-learn>=1.2",
  "sympy>=1.11",
]

[project.optional-dependencies]
gurobi = ["gurobipy>=10.0"]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["kics*"]
exclude = ["data*", "tests*", "scripts*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
